# cargo-run-solana-tests

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build-test.yml
src/: main.rs
