[package]
name = "run-solana-tests"
description = "Blockchain, Rebuilt for Scale"
version = "2.0.0"
documentation = "https://docs.rs/solana"
homepage = "https://solana.com/"
readme = "README.md"
repository = "https://github.com/solana-labs/cargo-run-solana-tests"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
agave-logger = { git = "https://github.com/anza-xyz/agave.git", rev = "58eb815ef2c9cad9f1156de38d2c8219db5baea2", features = ["agave-unstable-api"] }
agave-syscalls = { git = "https://github.com/anza-xyz/agave.git", rev = "58eb815ef2c9cad9f1156de38d2c8219db5baea2" }
anyhow = "1.0.100"
regex = "1.12.2"
solana-account = "3.2.0"
solana-bpf-loader-program = { git = "https://github.com/anza-xyz/agave.git", rev = "58eb815ef2c9cad9f1156de38d2c8219db5baea2", features = ["svm-internal", "agave-unstable-api"] }
solana-clock = "3.0.0"
solana-hash = "3.0.0"
solana-program-entrypoint = "3.1.0"
solana-program-runtime = { git = "https://github.com/anza-xyz/agave.git", rev = "58eb815ef2c9cad9f1156de38d2c8219db5baea2" }
solana-pubkey = "3.0.0"
solana-sbpf = "0.13.0"
solana-sdk-ids = "3.0.0"
solana-svm-callback = { git = "https://github.com/anza-xyz/agave.git", rev = "58eb815ef2c9cad9f1156de38d2c8219db5baea2" }
solana-svm-feature-set = { git = "https://github.com/anza-xyz/agave.git", rev = "58eb815ef2c9cad9f1156de38d2c8219db5baea2" }
solana-svm-log-collector = { git = "https://github.com/anza-xyz/agave.git", rev = "58eb815ef2c9cad9f1156de38d2c8219db5baea2" }
solana-sysvar = "3.0.0"
solana-transaction-context = { git = "https://github.com/anza-xyz/agave.git", rev = "58eb815ef2c9cad9f1156de38d2c8219db5baea2" }
structopt = { version = "0.3", default-features = false }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "cargo-run-solana-tests"
path = "src/main.rs"
