[package]
name = "run-solana-tests"
description = "Blockchain, Rebuilt for Scale"
version = "2.0.0"
documentation = "https://docs.rs/solana"
homepage = "https://solana.com/"
readme = "README.md"
repository = "https://github.com/solana-labs/cargo-run-solana-tests"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
agave-logger = { git = "https://github.com/anza-xyz/agave.git", rev = "e38802420c78ee60c6f8928f229deb10954c2ea6", features = ["agave-unstable-api"] }
agave-syscalls = { git = "https://github.com/anza-xyz/agave.git", rev = "e38802420c78ee60c6f8928f229deb10954c2ea6", features = ["agave-unstable-api"] }
anyhow = "1.0.100"
regex = "1.12.2"
solana-account = "3.2.0"
solana-clock = "3.0.0"
solana-hash = "4.0.1"
solana-program-entrypoint = "3.1.0"
solana-program-runtime = { git = "https://github.com/anza-xyz/agave.git", rev = "e38802420c78ee60c6f8928f229deb10954c2ea6" }
solana-pubkey = "4.0.0"
solana-sbpf = "0.14.2"
solana-sdk-ids = "3.1.0"
solana-svm-callback = { git = "https://github.com/anza-xyz/agave.git", rev = "e38802420c78ee60c6f8928f229deb10954c2ea6" }
solana-svm-feature-set = { git = "https://github.com/anza-xyz/agave.git", rev = "e38802420c78ee60c6f8928f229deb10954c2ea6" }
solana-svm-log-collector = { git = "https://github.com/anza-xyz/agave.git", rev = "e38802420c78ee60c6f8928f229deb10954c2ea6" }
solana-sysvar = "3.1.1"
solana-transaction-context = { git = "https://github.com/anza-xyz/agave.git", rev = "e38802420c78ee60c6f8928f229deb10954c2ea6" }
structopt = { version = "0.3", default-features = false }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "cargo-run-solana-tests"
path = "src/main.rs"
